# sigwatch

./: CLAUDE.md  Cargo.toml  README.md  audit
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
examples/: target.rs
src/: app.rs  display.rs  layout.rs  main.rs  process.rs  scanner.rs  session.rs  tui.rs  watch.rs
src/widgets/: dashboard.rs  memory.rs  mod.rs  scanner.rs  status.rs
