[package]
name = "sigwatch"
version = "0.1.0"
edition = "2021"
description = "Live game state inspector - a TUI for real-time process memory visualization"
license = "MIT"
repository = "https://github.com/nvms/sigwatch"
keywords = ["game", "memory", "tui", "process", "reverse-engineering"]
categories = ["command-line-utilities", "development-tools::debugging", "games"]

[dependencies]
procmod-core = "1.0"
procmod-scan = "1.0"
procmod-layout = "1.0"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
